# Nova

./: .gitignore  CMakeLists.txt
include/: Nova.hpp
src/: tests.cpp
